--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-logo: https://upload.wikimedia.org/wikipedia/commons/d/d7/Sha-family.svg
+logo: https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Sha-family.svg/191px-Sha-family.svg.png
 title: SHAcrypt
